// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`E2E - react Monorepo project Installs react package 1`] = `
"Installing ts-dev-tools...
Applying migration "core - 20201024173398-init"...
Migration "core - 20201024173398-init" applied!
Applying migration "react - 20201111162698-init"...
Migration "react - 20201111162698-init" applied!
Applying migration "core - 20220617100200-prettier-cache"...
Migration "core - 20220617100200-prettier-cache" applied!
Applying migration "core - 20240329200200-eslint-ignore"...
Migration "core - 20240329200200-eslint-ignore" applied!
Applying migration "core - 20240412185500-eslint-config"...
Migration "core - 20240412185500-eslint-config" applied!
Applying migration "react - 20240412185501-eslint-config"...
Migration "react - 20240412185501-eslint-config" applied!
Applying migration "core - 20240617094000-config-nx-scopes"...
Migration "core - 20240617094000-config-nx-scopes" applied!
Applying migration "core - 20250623095500-add-prettier-oxc"...
Migration "core - 20250623095500-add-prettier-oxc" applied!
Applying migration "core - 20250623095600-remove-prettier-oxc"...
Migration "core - 20250623095600-remove-prettier-oxc" applied!
Applying migration "core - 20260311120000-migrate-to-biome"...
Migration "core - 20260311120000-migrate-to-biome" applied!
Symlinking dev dependencies...
- Symlinking @testing-library/dom
- Symlinking @testing-library/jest-dom
- Symlinking @testing-library/react
- Symlinking @ts-dev-tools/core
- Symlinking jest-environment-jsdom
- Symlinking react-test-renderer
- Symlinking @biomejs/biome
- Symlinking @commitlint/cli
- Symlinking @commitlint/config-conventional
- Symlinking @types/jest
- Symlinking jest
- Symlinking ts-jest
Symlinking dev dependencies done!
Resolving peer dependencies...
- Symlinking peer dependency "@jest/transform" required by "ts-jest"
- Symlinking peer dependency "@jest/types" required by "ts-jest"
- Symlinking peer dependency "babel-jest" required by "ts-jest"
- Symlinking peer dependency "jest-util" required by "ts-jest"
Resolving peer dependencies done!
Checking for duplicate dev dependencies...
Some dev dependencies are unnecessarily installed as their are already required by "@ts-dev-tools/core":
  - typescript

Check for duplicate dev dependencies done!
Installation done!"
`;

exports[`E2E - react Simple project Installs react package 1`] = `
"Installing ts-dev-tools...
Applying migration "core - 20201024173398-init"...
Migration "core - 20201024173398-init" applied!
Applying migration "react - 20201111162698-init"...
Migration "react - 20201111162698-init" applied!
Applying migration "core - 20220617100200-prettier-cache"...
Migration "core - 20220617100200-prettier-cache" applied!
Applying migration "core - 20240329200200-eslint-ignore"...
Migration "core - 20240329200200-eslint-ignore" applied!
Applying migration "core - 20240412185500-eslint-config"...
Migration "core - 20240412185500-eslint-config" applied!
Applying migration "react - 20240412185501-eslint-config"...
Migration "react - 20240412185501-eslint-config" applied!
Applying migration "core - 20240617094000-config-nx-scopes"...
Migration "core - 20240617094000-config-nx-scopes" applied!
Applying migration "core - 20250623095500-add-prettier-oxc"...
Migration "core - 20250623095500-add-prettier-oxc" applied!
Applying migration "core - 20250623095600-remove-prettier-oxc"...
Migration "core - 20250623095600-remove-prettier-oxc" applied!
Applying migration "core - 20260311120000-migrate-to-biome"...
Migration "core - 20260311120000-migrate-to-biome" applied!
Symlinking dev dependencies...
- Symlinking @testing-library/dom
- Symlinking @testing-library/jest-dom
- Symlinking @testing-library/react
- Symlinking @ts-dev-tools/core
- Symlinking jest-environment-jsdom
- Symlinking react-test-renderer
- Symlinking @biomejs/biome
- Symlinking @commitlint/cli
- Symlinking @commitlint/config-conventional
- Symlinking @types/jest
- Symlinking jest
- Symlinking ts-jest
Symlinking dev dependencies done!
Resolving peer dependencies...
- Symlinking peer dependency "@jest/transform" required by "ts-jest"
- Symlinking peer dependency "@jest/types" required by "ts-jest"
- Symlinking peer dependency "babel-jest" required by "ts-jest"
- Symlinking peer dependency "jest-util" required by "ts-jest"
Resolving peer dependencies done!
Checking for duplicate dev dependencies...
Some dev dependencies are unnecessarily installed as their are already required by "@ts-dev-tools/core":
  - @types/node
  - typescript

Some dev dependencies are unnecessarily installed as their are already required by "@ts-dev-tools/react":
  - @types/react
  - @types/react-dom

Check for duplicate dev dependencies done!
Installation done!"
`;

exports[`E2E - react Simple project Installs react package 2`] = `
{
  "build": "tsc --noEmit",
  "check": "biome check --write .",
  "dev": "vite",
  "format": "biome format --write .",
  "jest": "jest --detectOpenHandles --forceExit",
  "lint": "biome lint .",
  "prepare": "ts-dev-tools install",
  "preview": "vite preview",
  "test": "npm run jest --maxWorkers=50%",
  "test:ci": "npm run test:cov --runInBand",
  "test:cov": "npm run test --coverage",
  "test:watch": "npm run jest --watch --maxWorkers=25%",
}
`;

exports[`E2E - react Simple project Installs react package 3`] = `
{
  "collectCoverageFrom": [
    "**/src/**/*.[jt]s?(x)",
  ],
  "preset": "ts-jest",
  "testEnvironment": "jsdom",
  "testMatch": [
    "**/__tests__/**/*.[jt]s?(x)",
    "**/?(*.)+(spec|test)?(.*).+(ts|tsx|js)",
  ],
}
`;

exports[`E2E - react Simple project Installs react package 4`] = `
"{
  "$schema": "https://biomejs.dev/schemas/2.4.6/schema.json",
  "vcs": {
    "enabled": true,
    "clientKind": "git",
    "useIgnoreFile": true
  },
  "files": {
    "ignoreUnknown": false
  },
  "formatter": {
    "enabled": true,
    "indentStyle": "tab"
  },
  "linter": {
    "enabled": true,
    "rules": {
      "recommended": true
    }
  },
  "javascript": {
    "formatter": {
      "quoteStyle": "double"
    }
  },
  "assist": {
    "enabled": true,
    "actions": {
      "source": {
        "organizeImports": "on"
      }
    }
  }
}
"
`;
